--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+luajit (2.0.3+dfsg-1) unstable; urgency=medium
+
+  * New upstream release 
+  * All patches disabled: integrated in the upstream makefile 
+
+ -- Enrico Tassi <gareuselesinge@debian.org>  Thu, 13 Mar 2014 09:28:41 +0100
+
 luajit (2.0.2+dfsg-3) unstable; urgency=medium
 
   * Add powerpcspe architecture for the -dev package (Closes: #734700)
