--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+luajit (2.0.3+dfsg-2) unstable; urgency=medium
+
+  * Fix multilib value in .pc file (Closes: #743762)
+
+ -- Enrico Tassi <gareuselesinge@debian.org>  Tue, 08 Apr 2014 19:57:50 +0200
+
 luajit (2.0.3+dfsg-1) unstable; urgency=medium
 
   * New upstream release 
