--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+luajit (2.0.4+dfsg-1) unstable; urgency=medium
+
+  * New upstream release (Close: #789321)
+  * Build on Hurd (Close: #712975)
+
+ -- Enrico Tassi <gareuselesinge@debian.org>  Fri, 14 Aug 2015 16:40:52 +0200
+
 luajit (2.0.3+dfsg-3) unstable; urgency=medium
 
   * Fix FTBFS when /sbin is not in $PATH (Closes: 744917) 
